deploy/overlays/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laurel-ingress
  namespace: prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - laurel.andreslobaton.top
      secretName: laurel-tls
  rules:
    - host: laurel.andreslobaton.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: configurator-lob
                port:
                  number: 3007
